[gd_scene load_steps=21 format=2]

[ext_resource path="res://SCRIPTS/Cornillaud.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/A/character_selection_A_3.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/B/character_selection_B_1.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/A/character_selection_A_4.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/B/character_selection_B_2.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/B/character_selection_B_3.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/A/character_selection_A_0.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/A/character_selection_A_1.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/B/character_selection_B_0.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/A/character_selection_A_5.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/A/character_selection_A_2.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/B/character_selection_B_4.png" type="Texture" id=12]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER SELECTION/B/character_selection_B_5.png" type="Texture" id=13]
[ext_resource path="res://SCENES/Fade_scene.tscn" type="PackedScene" id=14]
[ext_resource path="res://ASSETS/SOUNDS/EFFECTS/validation.wav" type="AudioStream" id=15]
[ext_resource path="res://ASSETS/SOUNDS/EFFECTS/cancel.wav" type="AudioStream" id=16]
[ext_resource path="res://ASSETS/SOUNDS/EFFECTS/slide.wav" type="AudioStream" id=17]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER DATA SHEET/MOULUE.png" type="Texture" id=18]
[ext_resource path="res://ASSETS/GRAPHICS/CHARACTER DATA SHEET/COUILLU.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 10 ) ],
"loop": false,
"name": "C_M",
"speed": 15.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "M_C",
"speed": 15.0
} ]

[node name="Cornillaud" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioValid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="AudioCancel" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="AudioSlide" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "C_M"
frame = 5
centered = false

[node name="Moulue_cds" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 18 )

[node name="Couillu_cds" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 19 )

[node name="TransitionScreen" parent="." instance=ExtResource( 14 )]

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
